--- a/mindex.html
+++ b/mindex.html
@@ -1842,6 +1842,15 @@
                     { text: "Faber-Castell", correct: false, image: "images/fabercastell.jpg" },
                     { text: "Pentel", correct: false, image: "images/pentel.jpg" }
                 ]
+            },
+            {
+                question: "Полное собрание удовольствий",
+                answers: [
+                    { text: "Обломов", correct: true, image: "images/oblomov.jpg" },				
+                    { text: "Теремок", correct: false, image: "images/teremok.jpg" },
+                    { text: "Му-Му", correct: false, image: "images/mumu.jpg" },
+                    { text: "Ёби-Доёби", correct: false, image: "images/ebidoebi.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
