--- a/mindex.html
+++ b/mindex.html
@@ -1851,6 +1851,15 @@
                     { text: "Му-Му", correct: false, image: "images/mumu.jpg" },
                     { text: "Ёби-Доёби", correct: false, image: "images/ebidoebi.jpg" }
                 ]
+            },
+            {
+                question: "Весело и вкусно",
+                answers: [
+                    { text: "McDonald’s", correct: true, image: "images/macdonalds.jpg" },				
+                    { text: "Burger King", correct: false, image: "images/burgerking.jpg" },
+                    { text: "KFC", correct: false, image: "images/kfc.jpg" },
+                    { text: "Subway", correct: false, image: "images/subway.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
