--- a/mindex.html
+++ b/mindex.html
@@ -1860,6 +1860,15 @@
                     { text: "KFC", correct: false, image: "images/kfc.jpg" },
                     { text: "Subway", correct: false, image: "images/subway.jpg" }
                 ]
+            },
+            {
+                question: "Знак заботы и любви",
+                answers: [
+                    { text: "Pedigree", correct: true, image: "images/pedigree.jpg" },				
+                    { text: "Whiskas", correct: false, image: "images/whiskas.jpg" },
+                    { text: "Royal Canin", correct: false, image: "images/royalcanin.jpg" },
+                    { text: "Purina", correct: false, image: "images/purina.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
