--- a/mindex.html
+++ b/mindex.html
@@ -1869,6 +1869,15 @@
                     { text: "Royal Canin", correct: false, image: "images/royalcanin.jpg" },
                     { text: "Purina", correct: false, image: "images/purina.jpg" }
                 ]
+            },
+            {
+                question: "Свежее решение",
+                answers: [
+                    { text: "Mentos", correct: true, image: "images/mentos10.jpg" },				
+                    { text: "Orbit", correct: false, image: "images/orbit10.jpg" },
+                    { text: "Dirol", correct: false, image: "images/dirol10.jpg" },
+                    { text: "Wrigley's Spearmint", correct: false, image: "images/spearmint10.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
