--- a/mindex2.html
+++ b/mindex2.html
@@ -407,7 +407,7 @@
 		/* Адаптация для альбомной ориентации на мобильных устройствах */
 		@media (max-width: 768px) and (orientation: landscape) {
 			#win-modal .modal-content {
-				width: 100vw; /* Ширина окна равна ширине экрана */
+				width: 100vw !important; /* Ширина окна равна ширине экрана */
 				height: 100vh; /* Высота окна равна высоте экрана */
 				max-width: none; /* Убираем ограничение по максимальной ширине */
 				position: fixed; /* Фиксируем позицию */
