--- a/mindex2.html
+++ b/mindex2.html
@@ -405,12 +405,11 @@
         }
 
 		/* Адаптация для альбомной ориентации на мобильных устройствах */
-		@media (max-width: 768px) and (orientation: landscape) {
+		@media (max-width: 768px) {
 			body {
 				background-color: red; /* Временно для проверки */
 			}
-		}
-    </style>
+}    </style>
 </head>
 <body>
     <!-- Начальный экран -->
