--- a/mindex2.html
+++ b/mindex2.html
@@ -409,6 +409,7 @@
 			body {
 				background-color: red; /* Временно для проверки */
 			}
+		}
 }    </style>
 </head>
 <body>
@@ -502,15 +503,15 @@
         let activeSounds = [];
         let isAnswerSelected = false; // Флаг для отслеживания выбора ответа
 		
-		function adjustWinModal() {
-			const winModalContent = document.querySelector("#win-modal .modal-content");
-			if (winModalContent) {
-				winModalContent.style.width = "100vw"; // Принудительно задаем ширину
+		function applyRedBackground() {
+			const width = window.innerWidth;
+			if (width <= 768) {
+				document.body.style.backgroundColor = "red"; // Временно для проверки
 			}
 		}
 
-		window.addEventListener("resize", adjustWinModal);
-		adjustWinModal(); // Применяем при загрузке страницы
+		window.addEventListener("resize", applyRedBackground);
+		applyRedBackground(); // Применяем при загрузке страницы
 
         // Функция для проверки загрузки всех изображений
         function waitForImagesToLoad() {
