--- a/mindex2.html
+++ b/mindex2.html
@@ -516,8 +516,9 @@
                 // Сокращенный текст для мобильных устройств в альбомной ориентации
                 winModalBody.innerHTML = `
                     <p>Вы выиграли!</p>
-                    <p>Скидка 15% на услуги ТЕХТASY.</p>
-                    <p>Скриншот = скидка.</p>
+                    <p>С чем вас душевно поздравляем.</p>
+                    <p>Вы получаете 15% скидку на любые услуги контент-ателье ТЕХТASY.</p>
+                    <p>Скидка действительна при предъявлении скриншота этого сообщения в течение 30 дней.</p>
                 `;
             } else {
                 // Полный текст для ПК и портретной ориентации
