--- a/mindex2.html
+++ b/mindex2.html
@@ -516,14 +516,14 @@
                 // Сокращенный текст для мобильных устройств в альбомной ориентации
                 winModalBody.innerHTML = `
                     <p>С чем вас душевно поздравляем.</p>
-                    <p>Вы получаете 15% скидку на любые<br>услуги контент-ателье ТЕХТASY.</p>
+                    <p>Вы получаете 15% скидку на любые услуги контент-ателье ТЕХТASY.</p>
                     <p>Скидка действительна при предъявлении скриншота этого сообщения в течение 30 дней.</p>
                 `;
             } else {
                 // Полный текст для ПК и портретной ориентации
                 winModalBody.innerHTML = `
                     <p>С чем вас душевно поздравляем.</p>
-                    <p>Вы получаете 15% скидку на любые<br>услуги контент-ателье ТЕХТASY.</p>
+                    <p>Вы получаете 15% скидку на любые услуги контент-ателье ТЕХТASY.</p>
                     <p>Скидка действительна при предъявлении скриншота этого сообщения в течение 30 дней.</p>
                     <p>Поторопитесь!</p>
                     <p>И не забудьте сделать скриншот.</p>
