--- a/mindex2.html
+++ b/mindex2.html
@@ -357,8 +357,8 @@
         /* Стили для мобильных устройств в альбомной ориентации */
         @media (orientation: landscape) {
             body.mobile-device #win-modal .modal-content {
-                width: 80%; /* 80% ширины экрана */
-                height: 80vh; /* Увеличиваем высоту до 80% */
+                width: 60%; /* 80% ширины экрана */
+                height: 80vh; /* Уменьшаем высоту до 80% */
                 max-width: none; /* Убираем ограничение по максимальной ширине */
                 border-radius: 20px; /* Закругленные углы */
             }
